fix:  Use number_of_replicas and number_of_shards Elasticsearch configuration when it changes